# imu

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: publish.yml  require-checklist.yaml  test.yml
examples/: graph_hexmove.py  hexmove.py  hiwonder_example.py
imu/: Cargo.toml  README.md  __init__.py  requirements-dev.txt
imu/bindings/: Cargo.toml  bindings.pyi
imu/bindings/src/: hexmove.rs  hiwonder.rs  lib.rs
imu/bmi088/: Cargo.toml  README.md
imu/bmi088/src/: lib.rs  registers.rs
imu/bno055/: Cargo.toml  README.md
imu/bno055/src/: lib.rs  registers.rs
imu/drivers/bmi088/: Cargo.toml
imu/drivers/bmi088/src/: lib.rs
imu/drivers/bno055/: Cargo.toml
imu/drivers/bno055/src/: lib.rs
imu/drivers/hexmove/: Cargo.toml  README.md
imu/drivers/hexmove/src/: lib.rs
imu/drivers/hiwonder/: Cargo.toml
imu/drivers/hiwonder/hiwonder_macros/: Cargo.toml  README.md
imu/drivers/hiwonder/hiwonder_macros/src/: lib.rs
imu/drivers/hiwonder/src/: frame.rs  lib.rs  register.rs
imu/hexmove/: Cargo.toml  README.md
imu/hexmove/python/: imu.py
imu/hexmove/src/: lib.rs
imu/hiwonder/: Cargo.toml  README.md
imu/hiwonder/src/: lib.rs
imu/imu-traits/: Cargo.toml  README.md
imu/imu-traits/src/: lib.rs
imu/src/: lib.rs
