[workspace]

members = [
    "imu",
    "imu/bindings",
    "imu/hexmove",
]
resolver = "2"

[workspace.package]

version = "0.1.3"
authors = ["Wesley Maa <wesley@kscale.dev>"]
edition = "2021"
description = "IMU package"
license = "MIT"
repository = "https://github.com/kscalelabs/imu"
readme = "README.md"
