[workspace]

members = [
    "imu",
    "imu/bindings",
    "imu/hexmove",
    "imu/hiwonder",
    "imu/bno055",
    "imu/bmi088",
]
resolver = "2"

[workspace.package]
version = "0.3.1"
authors = ["Wesley Maa <wesley@kscale.dev>"]
edition = "2021"
description = "IMU package"
license = "MIT"
repository = "https://github.com/kscalelabs/imu"
readme = "README.md"
