[workspace]

members = [
    "imu",
    "imu/imu-traits/",
    "imu/bindings",
    "imu/drivers/hexmove",
    "imu/drivers/hiwonder",
    "imu/drivers/hiwonder/hiwonder_macros",
    "imu/drivers/bno055",
    "imu/drivers/bmi088",
]
resolver = "2"

[workspace.package]
version = "0.7.1"
authors = ["Wesley Maa <wesley@kscale.dev>"]
edition = "2021"
description = "IMU package"
license = "MIT"
repository = "https://github.com/kscalelabs/imu"
readme = "README.md"
