[package]

name = "bindings"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[lib]

name = "bindings"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
pyo3-stub-gen = "0.7.0"
imu = {path="../"}
