[package]

name = "hexmove"
readme = "README.md"
description = "Interface for interacting with Hexmove IMUs"
version = "0.1.6"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]

name = "hexmove"
crate-type = ["rlib"]

[dependencies]
socketcan = "3.3.0"
log = "0.4"
