[package]
name = "hiwonder"
version = "0.2.1"
readme = "README.md"
description = "Interface for interacting with Hiwonder IMUs"
edition = "2021"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serialport = "4.2.0"

[lib]

name = "hiwonder"
crate-type = ["rlib"]
