[package]
name = "imu-traits"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
description = "Shared traits for IMU"
license.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
name = "imu_traits"
crate-type = ["rlib"]

[dependencies]
log = "0.4"
serialport="4.7.1"
