[package]
name = "imu-traits"
version = "0.0.2"
authors.workspace = true
edition.workspace = true
description = "Shared traits for IMU"
license.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
name = "imu_traits"
crate-type = ["rlib"]

[dependencies]
log = "0.4"
serialport= { version="4.7.1", optional=true }

[features]
std = ["serialport"]
nostd = []
high_precision = []  # use f64 instead of f32